Completed problem set.

--- a/1.orbital_calculations/problem_set.ipynb
+++ b/1.orbital_calculations/problem_set.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -122,14 +122,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mass of the planet (m): 1.7173046486431942e+38  kg\n"
+      "Mass of the planet (m): 1.72e+38 kg\n"
      ]
     }
    ],
@@ -139,7 +139,7 @@
     "T = 15.94 * 24 * 60 * 60 #s\n",
     "\n",
     "m = (r**3)/G * (2*np.pi)\n",
-    "print(\"Mass of the planet (m):\", m, \" kg\")"
+    "print(f'Mass of the planet (m): {m:.2e} kg')"
    ]
   },
   {
@@ -207,15 +207,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Orbital period of NASA Aqua:  98.88  min\n",
-      "Orbital period of Suomi-NPP:  101.38  min\n"
+      "Orbital period of NASA Aqua: 98.88 min\n",
+      "Orbital period of Suomi-NPP: 101.38 min\n"
      ]
     }
    ],
@@ -227,8 +227,9 @@
     "\n",
     "T_A = 2 * np.pi * np.sqrt((r_A**3)/(G*m))\n",
     "T_S = 2 * np.pi * np.sqrt((r_S**3)/(G*m))\n",
-    "print(\"Orbital period of NASA Aqua: \", round(T_A/60, 2), \" min\")\n",
-    "print(\"Orbital period of Suomi-NPP: \", round(T_S/60, 2), \" min\")"
+    "\n",
+    "print(f'Orbital period of NASA Aqua: {T_A/60:.2f} min')\n",
+    "print(f'Orbital period of Suomi-NPP: {T_S/60:.2f} min')"
    ]
   },
   {
@@ -245,20 +246,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for NASA Aqua to 'lap' Suomi-NPP:  2.78  days\n"
+      "Time for NASA Aqua to 'lap' Suomi-NPP: 2.78 days\n"
      ]
     }
    ],
    "source": [
     "T_lap = 1/((1/T_A)-(1/T_S))\n",
-    "print(\"Time for NASA Aqua to 'lap' Suomi-NPP: \", round(T_lap/(60*60*24), 2), \" days\")"
+    "print(f\"Time for NASA Aqua to 'lap' Suomi-NPP: {T_lap/(60*60*24):.2f} days\")"
    ]
   },
   {
@@ -295,8 +296,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The LTAN is the \"local time for the ascending node\" and will change for a non-sun-synchronous satellite. "
+    "The LTAN is the \"local time for the ascending node\" and will change for a non-sun-synchronous satellite. However, with respect to the stars (inertial coordinate system) the orbital plane does not change. \n",
+    "\n",
+    "After a full year, the orbit of the Earth around the Sun will return the LTAN to the original 1200 time (albeit a day off). For a half year (vernal to fall equinox), we will get half of that, or a 12 hour change. Since Earth orbits the Sun toward the \"east\" (with respect to its own coordinate system), the LTAN is pushing backwards in time. \n",
+    "\n",
+    "Therefore, the LTAN on the Fall Equinox will be 0000. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. c) Modify the following TLE for Suomi NPP (satellite ID 37849, valid on 16 Aug 2017) to\n",
+    "change the LTAN two hours earlier.\n",
+    "\n",
+    "NPP **(Original)**\n",
+    "\n",
+    "1 37849U 11061A 17228.00000000 .00000026 00000-0 12334-4 0 424\n",
+    "\n",
+    "2 37849 098.7373 165.9147 0000987 068.4314 006.4679 14.19535358300585"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Changing the LTAN is essentially comparable to changing the right ascension of the ascending node (RAAN, $\\Omega$). Since the Earth completes $360^\\circ$ rotation in ~$24$ hours, the hourly change of $\\Omega$ is $15^\\circ$. For two hours earlier in LTAN, the change in $\\Omega$ is $30^\\circ$. And since it is earlier in the day (westward), the change in $\\Omega$ is negative. \n",
+    "\n",
+    "NPP **(Two hours earlier)**\n",
+    "\n",
+    "1 37849U 11061A 17228.00000000 .00000026 00000-0 12334-4 0 424\n",
+    "\n",
+    "2 37849 098.7373 **135.9147** 0000987 068.4314 006.4679 14.19535358300585"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
