--- a/1.orbital_calculations/problem_set.ipynb
+++ b/1.orbital_calculations/problem_set.ipynb
@@ -84,10 +84,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Using a high-powered telescope, you measure the distance between a planet and one of its\n",
+    "**2. Using a high-powered telescope, you measure the distance between a planet and one of its\n",
     "moons as $1.22185*10^6$ km (mass center to mass center). Next, you measure the time\n",
     "required for that moon to complete one orbit around the planet as $15.94$ days. Using these\n",
-    "data, what is the approximate mass of the planet?\n"
+    "data, what is the approximate mass of the planet?**\n"
    ]
   },
   {
@@ -146,11 +146,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Consider two satellites (A and B) flying in circular orbits, in the same orbital plane, and\n",
+    "**3. Consider two satellites (A and B) flying in circular orbits, in the same orbital plane, and\n",
     "traveling in the same direction. Satellite B is two times further away from the center of\n",
     "Earth than Satellite A. At initial time, both satellites are perfectly aligned (Satellite B is\n",
     "directly “above” Satellite A). Time elapses. Where is Satellite B in its orbit at the moment\n",
-    "that Satellite A completes its first full orbit?"
+    "that Satellite A completes its first full orbit?**"
    ]
   },
   {
@@ -179,10 +179,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. NASA Aqua flies at an altitude of 705 km, and Suomi-NPP flies at an altitude of 824 km.\n",
+    "**4. NASA Aqua flies at an altitude of 705 km, and Suomi-NPP flies at an altitude of 824 km.\n",
     "Both satellites fly in sun-synchronous orbits in the 1330 LTAN orbital plane. Consider at\n",
     "initial time these two satellites being perfectly aligned, as in Problem 3. How much time\n",
-    "elapses before the two satellites are perfectly aligned once again?"
+    "elapses before the two satellites are perfectly aligned once again?**"
    ]
   },
   {
@@ -266,10 +266,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. a)  For a sun-synchronous 1200 LTAN orbit, what are the values of the right ascension of the\n",
+    "**5. a)  For a sun-synchronous 1200 LTAN orbit, what are the values of the right ascension of the\n",
     "ascending node on the days of i) Vernal Equinox, ii) Summer Solstice, iii) Fall Equinox, and iv)\n",
     "Winter Solstice? Remember that the right-ascension/declination coordinate system is fixed\n",
-    "with respect to the stars."
+    "with respect to the stars.**"
    ]
   },
   {
@@ -287,9 +287,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. b) Same question as part (a), but now for an asynchronous LEO satellite with $i = 90^\\circ$ and a\n",
+    "**5. b) Same question as part (a), but now for an asynchronous LEO satellite with $i = 90^\\circ$ and a\n",
     "1200 LTAN on the day of the Vernal Equinox. What is the LTAN for this orbit on the day of\n",
-    "the Fall Equinox?"
+    "the Fall Equinox?**"
    ]
   },
   {
@@ -307,8 +307,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. c) Modify the following TLE for Suomi NPP (satellite ID 37849, valid on 16 Aug 2017) to\n",
-    "change the LTAN two hours earlier.\n",
+    "**5. c) Modify the following TLE for Suomi NPP (satellite ID 37849, valid on 16 Aug 2017) to\n",
+    "change the LTAN two hours earlier.**\n",
     "\n",
     "NPP **(Original)**\n",
     "\n",
