--- a/2.brightness_temperature/problem_set.ipynb
+++ b/2.brightness_temperature/problem_set.ipynb
@@ -10,6 +10,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,6 +38,61 @@
     "*[Software: you can either code up the Planck and Inverse Planck function from the\n",
     "Radiative Transfer Lecture 1, using any available Python codes, or the IDL codes supplied\n",
     "on the class Google Drive]*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.9 um: temperature 361.0, radiance 4813437.1, brightness temperature 361.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "wl = 3.9e-6 #m\n",
+    "\n",
+    "c = 299792458 #m/s\n",
+    "h = 6.6260755e-34 #Js\n",
+    "k = 1.380658e-23 #J/K\n",
+    "\n",
+    "c1 = 2*h*c*c  #W m2\n",
+    "c2 = h*c/k    #K m\n",
+    "\n",
+    "T = 1000*0.1+290*0.9 #K\n",
+    "\n",
+    "B = c1 / ( (wl)**5 * (np.exp(c2/(wl*T) ) - 1 ) )\n",
+    "\n",
+    "T_B = c2 / ( wl * np.log( c1/( (wl**5) * B ) + 1 ) )\n",
+    "\n",
+    "print('3.9 um: temperature '+str(T)+', radiance '+str(round(B,1))+', brightness temperature '+str(T_B))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 um: temperature 361.0, radiance 20285472.9, brightness temperature 361.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "wl = 11.0e-6 #m\n",
+    "\n",
+    "B = c1 / ( (wl)**5 * (np.exp(c2/(wl*T) ) - 1 ) )\n",
+    "\n",
+    "T_B = c2 / ( wl * np.log( c1/( (wl**5) * B ) + 1 ) )\n",
+    "\n",
+    "print('11 um: temperature '+str(T)+', radiance '+str(round(B,1))+', brightness temperature '+str(T_B))"
    ]
   },
   {
@@ -187,8 +251,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ats737",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
