--- a/2.brightness_temperature/problem_set.ipynb
+++ b/2.brightness_temperature/problem_set.ipynb
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.9 um: temperature 361.0, radiance 4813437.1, brightness temperature 361.0\n"
+      "3.9 um: temperature 361.0, radiance 4.8e+06, brightness temperature 361.0\n"
      ]
     }
    ],
@@ -69,19 +69,19 @@
     "\n",
     "T_B = c2 / ( wl * np.log( c1/( (wl**5) * B ) + 1 ) )\n",
     "\n",
-    "print('3.9 um: temperature '+str(T)+', radiance '+str(round(B,1))+', brightness temperature '+str(T_B))"
+    "print(f'3.9 um: temperature {T}, radiance {B:.2g}, brightness temperature {T_B}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11 um: temperature 361.0, radiance 20285472.9, brightness temperature 361.0\n"
+      "11 um: temperature 361.0, radiance 2e+07, brightness temperature 361.0\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
     "\n",
     "T_B = c2 / ( wl * np.log( c1/( (wl**5) * B ) + 1 ) )\n",
     "\n",
-    "print('11 um: temperature '+str(T)+', radiance '+str(round(B,1))+', brightness temperature '+str(T_B))"
+    "print(f'11 um: temperature {T}, radiance {B:.2g}, brightness temperature {T_B}')\n"
    ]
   },
   {
@@ -106,7 +106,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The brightness temperatures are the same because there are no emissivity differences or atmospheric effects to cause the scene to diverge from acting like a blackbody. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1c. Repeat this experiment assuming a measurement at a wavelength of $\\lambda = 3$ millimeter (W-band) and another measurement at a wavelength of $\\lambda = 1$ centimeter (Ka-band). Again, assume surface emissivity $\\epsilon = 1.0$ and the atmosphere is behaving as a window for both measurements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ka-band (1 cm): temperature 361.0, radiance 0.0003, brightness temperature 361.00000000000097\n"
+     ]
+    }
+   ],
+   "source": [
+    "wl = 1e-2 #m\n",
+    "\n",
+    "c = 299792458 #m/s\n",
+    "h = 6.6260755e-34 #Js\n",
+    "k = 1.380658e-23 #J/K\n",
+    "\n",
+    "c1 = 2*h*c*c  #W m2\n",
+    "c2 = h*c/k    #K m\n",
+    "\n",
+    "T = 1000*0.1+290*0.9 #K\n",
+    "\n",
+    "B = c1 / ( (wl)**5 * (np.exp(c2/(wl*T) ) - 1 ) )\n",
+    "\n",
+    "T_B = c2 / ( wl * np.log( c1/( (wl**5) * B ) + 1 ) )\n",
+    "\n",
+    "print(f'Ka-band (1 cm): temperature {T}, radiance {B:.2g}, brightness temperature {T_B}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W-band (3 mm): temperature 361.0, radiance 0.037, brightness temperature 361.0000000000018\n"
+     ]
+    }
+   ],
+   "source": [
+    "wl = 3e-3 #m\n",
+    "\n",
+    "B = c1 / ( (wl)**5 * (np.exp(c2/(wl*T) ) - 1 ) )\n",
+    "\n",
+    "T_B = c2 / ( wl * np.log( c1/( (wl**5) * B ) + 1 ) )\n",
+    "\n",
+    "print(f'W-band (3 mm): temperature {T}, radiance {B:.2g}, brightness temperature {T_B}')"
    ]
   },
   {
@@ -120,7 +182,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The brightness temperatures are again the same because these objects are behaving as blackbodies for this scenario. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1e. How does the second experiment’s result compare to a simple weighted average of the temperatures for the burning and non-burning parts of the scene?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The weighted temperature is the same as the brightness temperatures for these scenarios. "
    ]
   },
   {
@@ -139,10 +215,88 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Brightness temperature: 242.58 K\n"
+     ]
+    }
+   ],
+   "source": [
+    "def blackbody_radiance(T, wl):\n",
+    "    h = 6.626e-34\n",
+    "    c = 3e8\n",
+    "    k = 1.380e-23\n",
+    "    B = (2*h*c**2)/(wl**5 * (np.exp((h*c)/(k*wl*T))-1))\n",
+    "    return B\n",
+    "\n",
+    "def I_sfc(wl, T_sfc, optical_thickness, mu):\n",
+    "    I_sfc = blackbody_radiance(T_sfc, wl)*np.exp(-optical_thickness/mu)\n",
+    "    return I_sfc\n",
+    "\n",
+    "def I_cloud(wl, T_cloud):\n",
+    "    I_cloud = blackbody_radiance(T_cloud, wl)\n",
+    "    return I_cloud\n",
+    "\n",
+    "def brightness_temperature(I, wl):\n",
+    "    h = 6.626e-34\n",
+    "    c = 3e8\n",
+    "    k = 1.380e-23\n",
+    "    Tb = (h*c)/(k*wl * np.log(1 + ((2*h*c**2)/(I*wl**5))))\n",
+    "    return Tb\n",
+    "\n",
+    "wl = 8.5e-6 #m\n",
+    "T_sfc = 300 #K\n",
+    "T_cloud = 220 #K\n",
+    "mu = np.cos(45) #degrees from zenith\n",
+    "tau_cloud = 1\n",
+    "emissivity_sfc = 0.9\n",
+    "\n",
+    "I = emissivity_sfc*I_sfc(wl, T_sfc, tau_cloud, mu) + I_cloud(wl, T_cloud)\n",
+    "\n",
+    "T_B = brightness_temperature(I, wl)\n",
+    "\n",
+    "print(f'Brightness temperature: {T_B:.2f} K')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "2b. Repeat the calculation for a nadir observation angle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Brightness temperature: 263.72 K\n"
+     ]
+    }
+   ],
+   "source": [
+    "wl = 8.5e-6 #m\n",
+    "T_sfc = 300 #K\n",
+    "T_cloud = 220 #K\n",
+    "mu = np.cos(0) #degrees from zenith\n",
+    "tau_cloud = 1\n",
+    "emissivity_sfc = 0.9\n",
+    "\n",
+    "I = emissivity_sfc*I_sfc(wl, T_sfc, tau_cloud, mu) + I_cloud(wl, T_cloud)\n",
+    "\n",
+    "T_B = brightness_temperature(I, wl)\n",
+    "\n",
+    "print(f'Brightness temperature: {T_B:.2f} K')"
    ]
   },
   {
@@ -169,6 +323,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "At nadir, the observed radiance will be at its maximum. This is due to the reduced impact of the transmittance term ($e^{-\\tau^*_\\lambda / \\mu}$) through that shortest path length through the atmosphere. As the viewing angle increases toward the limb, the atmospheric contribution will be relatively larger ($B_\\lambda(T)$ in the equation) and the surface radiance relatively smaller. And since the atmosphere is cooler, this will cause a reduction in observed radiance at the limb. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "3b. The solution to the RTE for a purely scattering medium (valid for the visible-light spectrum) under the assumption of first-order scattering of sunlight (ignoring higher-order diffuse scatter) is given by:\n",
     "\n",
     "$$\n",
@@ -176,6 +337,13 @@
     "$$\n",
     "\n",
     "Where $\\omega_\\lambda$ is the single-scatter albedo, $F_{0, \\lambda}$ is the downwelling solar spectral irradiance at the top of the atmosphere, $P_\\lambda (\\theta_0)$ is the scattering phase function, and $\\theta_0$ is the scattering angle between the Sun and satellite viewing direction, and all other variables are as in part (a). Assume for this problem observations in the visible spectrum over an dark ocean surface, away from sun glint. Once again, explain in words (i.e., based on components of the equation; no calculations needed) the general trend of the observed radiance ($L_{\\lambda, sat}$) as the viewing zenith angle increases from 0° (nadir) toward 90° (the limb of the earth). You can neglect curvature of the earth for this explanation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The observed radiance will be at its maximum from the nadir perspective. This is due to both the optical thickness (as described before) and the phase function. The phase function determines how isotropically the light is scattered, so this will determine how quickly the observed radiance decreases as the viewing moves toward the limb. "
    ]
   },
   {
