--- a/2.radiation/problem_set.ipynb
+++ b/2.radiation/problem_set.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4a. Identify mid-latitude cyclones at three different stages in development (initial/precursor, cyclogenesis/wave underway, and intensification/maturing stages) and identify flows of warm/cold air based on conveyor belt theory. Compare against synoptic analysis if available. You can follow the development of one system or pick out various systems in different stages. (For assistance, consult the Bader et al. book, the NOAA Ocean Prediction Center (OPC) “Types of Cylcones” hand-out provided on the class drive, or this short EUMETrain piece)."
+    "4a. Identify mid-latitude cyclones at three different stages in development (initial/precursor, cyclogenesis/wave underway, and intensification/maturing stages) and identify flows of warm/cold air based on conveyor belt theory. Compare against synoptic analysis if available. You can follow the development of one system or pick out various systems in different stages. (For assistance, consult the Bader et al. book, the NOAA Ocean Prediction Center (OPC) “Types of Cyclones” hand-out provided on the class drive, or this short EUMETrain piece)."
    ]
   },
   {
